--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,7 @@
 tasks:
   # This task is run during pre-build and it's log and built results are
   # restored as part of the workspace initialization.
-  - prebuild: build/gitpod/build-wasm.sh
+  - init: Installation mono
     command: |
       sudo apt install ca-certificates gnupg
       sudo gpg --homedir /tmp --no-default-keyring --keyring /usr/share/keyrings/mono-official-archive-keyring.gpg --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
